tests/invalid/invalid-027.inox
Module Invalid

Main() :
    if True
        Exit
    ;
    else
        Exit
    ;
;
